Fixing subtitle alignment

--- a/my-app/src/styles/App.scss
+++ b/my-app/src/styles/App.scss
@@ -15,12 +15,12 @@
 }
 
 .subPageTitle {
+  text-align: center;
     position: absolute;
     top: 0%;
     left: 0;
     right: 0;
     margin: auto;
-    padding: auto;
     width: 35vmin;
     color:black;
     font-size: calc(10px + 8vmin);
